tests/checker/ok/option_dispatch.can
Unit => Program {
    Some(7) -> (
        * None => Unit { "none" -> Print }
        * Some<Int> => Unit { "some" -> Print }
    )
}
